generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id           Int      @id @default(autoincrement())
  githubId     Int      @unique
  oauthToken   String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  githubHandle String   @db.VarChar(255)
  claims       Claim[]
}

model Profile {
  id              Int      @id @default(autoincrement())
  address         String   @unique @db.VarChar(255)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  bio             String
  bannerImageUrl  String?  @db.VarChar(255)
  name            String?  @db.VarChar(255)
  profileImageUrl String?  @db.VarChar(255)
}

model Organization {
  id        Int      @id @default(autoincrement())
  name      String   @db.VarChar(50)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  repos     Repo[]
}

model Repo {
  id             Int           @id @default(autoincrement())
  githubRepoId   Int           @unique
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
  organizationId Int?
  Organization   Organization? @relation(fields: [organizationId], references: [id])
  gitPOAPs       GitPOAP[]

  @@index([organizationId], map: "Repo_organizationId_fkey")
}

model Claim {
  id          Int         @id @default(autoincrement())
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  status      ClaimStatus @default(UNCLAIMED)
  poapTokenId String?     @unique @db.VarChar(255)
  userId      Int
  address     String?     @db.VarChar(255)
  gitPOAPId   Int
  gitPOAP     GitPOAP     @relation(fields: [gitPOAPId], references: [id])
  user        User        @relation(fields: [userId], references: [id])

  @@index([gitPOAPId], map: "Claim_gitPOAPId_fkey")
  @@index([userId], map: "Claim_userId_fkey")
}

model GitPOAP {
  id          Int       @id @default(autoincrement())
  type        ClaimType @default(ANNUAL)
  year        Int
  poapEventId Int       @unique
  repoId      Int
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  Repo        Repo      @relation(fields: [repoId], references: [id])
  claims      Claim[]

  @@index([repoId], map: "GitPOAP_repoId_fkey")
}

enum ClaimStatus {
  UNCLAIMED
  PENDING
  CLAIMED
}

enum ClaimType {
  ANNUAL
  QUARTERLY
  MANUAL
}
