//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  githubId Int [unique, not null]
  oauthToken String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  githubHandle String [not null]
  claims Claim [not null]
}

Table Profile {
  id Int [pk, increment]
  address String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  bio String [not null]
  bannerImageUrl String
  name String
  profileImageUrl String
}

Table Organization {
  id Int [pk, increment]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  repos Repo [not null]
}

Table Repo {
  id Int [pk, increment]
  githubRepoId Int [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  organizationId Int
  Organization Organization
  gitPOAPs GitPOAP [not null]
}

Table Claim {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  status ClaimStatus [not null, default: 'UNCLAIMED']
  poapTokenId String [unique]
  userId Int [not null]
  address String
  gitPOAPId Int [not null]
  gitPOAP GitPOAP [not null]
  user User [not null]
}

Table GitPOAP {
  id Int [pk, increment]
  type ClaimType [not null, default: 'ANNUAL']
  year Int [not null]
  poapEventId Int [unique, not null]
  repoId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Repo Repo [not null]
  claims Claim [not null]
}

Enum ClaimStatus {
  UNCLAIMED
  PENDING
  CLAIMED
}

Enum ClaimType {
  ANNUAL
  QUARTERLY
  MANUAL
}

Ref: Repo.organizationId > Organization.id

Ref: Claim.gitPOAPId > GitPOAP.id

Ref: Claim.userId > User.id

Ref: GitPOAP.repoId > Repo.id